...
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lesson_rating_bar" />

        <Button
            android:id="@+id/rate_lesson"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="190dp"
            android:layout_height="71dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lesson_rating_header"
                    style="?attr/textAppearanceHeadline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="TextView"
                    app:layout_constraintEnd_toEndOf="parent"
...
