...
        android:text="@string/view"
        app:shapeAppearance="@style/ShapeAppearance.MyApp.HalfButton"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="318dp" />

    <Button
        android:id="@+id/open_lessons"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/lesson"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="128dp"
...
